Fix trash overflowing text in comment box

--- a/styles/CommentBox.module.css
+++ b/styles/CommentBox.module.css
@@ -46,7 +46,7 @@
   border: none;
   border-radius: 8px;
   margin-top: -4px;
-  margin-bottom: -8px;
+  margin-bottom: -4px;
 }
 
 .trash:hover {
